packages/language/test/fixtures/projects/diagnostics/parse-errors/invalid-block-close.siren
# EL003 — Unexpected close of a non-existent block
}
